app/main/default/objects/ActionPlanTemplate__c/ActionPlanTemplate__c.object-meta.xml
<CustomObject>
    <description>Template for Action Plan</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ImportId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ImportId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SkipDay__c</fullName>
        <description>If a Due Date lands on a weekend it should be pushed to this day.</description>
        <label>Skip Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                    <default>true</default>
                    <label>Monday</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SkipWeekends__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, tasks included in an Action Plan will not be given a Due Date that falls on a weekend.</description>
        <inlineHelpText>If selected, tasks included in an Action Plan will not be given a Due Date that falls on a weekend.</inlineHelpText>
        <label>Skip Weekends</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TaskRecordTypeID__c</fullName>
        <label>Task Record Type ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Action Plan Template</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Plan Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>