app/main/default/objects/ActionPlanTemplate__c/fields/Description__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
</CustomObject>