app/main/default/objects/ActionPlanTemplate__c/fields/ImportId__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>ImportId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ImportId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>