app/main/default/objects/ActionPlanTemplate__c/fields/SkipDay__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>SkipDay__c</fullName>
        <description>If a Due Date lands on a weekend it should be pushed to this day.</description>
        <label>Skip Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                    <default>true</default>
                    <label>Monday</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>