app/main/default/objects/ActionPlanTemplate__c/fields/TaskRecordTypeID__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>TaskRecordTypeID__c</fullName>
        <label>Task Record Type ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>