app/main/default/objects/ActionPlanTemplate__c/listViews/All.listView-meta.xml
<CustomObject>
    <listViews>
        //
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>